@@ -177,6 +177,7 @@ class User < ActiveRecord::Base
   before_save :ensure_external_user_rights
   after_save :ensure_namespace_correct
   after_initialize :set_projects_limit
+  before_create :check_confirmation_email
   after_create :post_create_hook
   after_destroy :post_destroy_hook
 
@@ -370,6 +371,10 @@ class User < ActiveRecord::Base
     self.reset_password_sent_at = Time.now.utc
 
     @reset_token
+  end
+
+  def check_confirmation_email
+    skip_confirmation! if current_application_settings.skip_user_confirmation_email
   end
 
   def recently_sent_password_reset?
